@@ -92,4 +92,9 @@
 #endif
 @EINA_CONFIGURE_HAVE_BYTESWAP_H@
 
+#ifdef EINA_HAVE_POSIX_SPINLOCK
+# undef EINA_HAVE_POSIX_SPINLOCK
+#endif
+@EINA_CONFIGURE_HAVE_POSIX_SPINLOCK@
+
 #endif /* EINA_CONFIG_H_ */
