@@ -41,6 +41,7 @@ Additions:
      EINA_RECTANGLE_INIT, EINA_RECTANGLE_FORMAT, EINA_RECTANGLE_ARGS.
      - Add eina_f16p16_double_from(), eina_f16p16_double_to().
      - Add eina_swap16(), eina_swap32(), eina_swap64().
+     - Add Eina_Spinlock API.
     * Eet:
      - Add eet_mmap()
      - Add eet_data_descriptor_name_get()
